[gd_scene load_steps=5 format=3 uid="uid://kxywyvfdo3y8"]

[ext_resource type="Texture2D" uid="uid://cqhfunqutv6i" path="res://singleplayer_prototype/sprites/BoilerRoomAtlas.png" id="1_gbx2e"]
[ext_resource type="Script" path="res://singleplayer_prototype/scripts/wall_hole.gd" id="1_kjemv"]
[ext_resource type="Texture2D" uid="uid://q41cy8h6p8e5" path="res://singleplayer_prototype/sprites/e_key.png" id="3_l0ggk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sdjsn"]
size = Vector2(23.4007, 11)

[node name="WallHole" type="Node2D"]
script = ExtResource("1_kjemv")

[node name="EnterArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterArea"]
position = Vector2(-2, 15)
rotation = 0.958186
shape = SubResource("RectangleShape2D_sdjsn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_gbx2e")
region_enabled = true
region_rect = Rect2(410, 1436, 17, 52)

[node name="E-KeySprite" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(4, -35)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_l0ggk")

[connection signal="body_entered" from="EnterArea" to="." method="_on_enter_area_body_entered"]
[connection signal="body_exited" from="EnterArea" to="." method="_on_enter_area_body_exited"]
